--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.2",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "fullcalendar": "^6.1.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
